--- a/appsettings.Release.json
+++ b/appsettings.Release.json
@@ -2,7 +2,7 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Release",
       "System": "Information",
       "Microsoft": "Information"
     }
