Added connection string to appsettings.json and used the setting in Startup

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "microbank_connection": "Server=(local)\\SQLEXPRESS;Database=microbank;Trusted_Connection=True;"
   }
 }
